# startpages-template

./: .gitignore  Cargo.toml  README.md  development.html  flake.nix  home.html  startpages.yaml
.github/workflows/: deploy-github-pages.yaml
_docs/: colorschemes.md  content-schema.puml
content/: startpages.yaml
css/: styles.css
docs/: home.html  work.html
generator/: Cargo.toml
generator/src/: main.rs
generator/templates/: foo.html  startpage.html
public/favicon/: about.txt  site.webmanifest
sass/: styles.scss
src/: main.rs
templates/: startpage.html
