[package]
name = "generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
tera = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.21"
rsass = "0.27.0"
fs_extra = "1.3.0"
